--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">PremiereQueteStudio</string>
+    <string name="title">Welcome to the Wild Code Scool :</string>
+    <string name="checkbox">Oui je souhaite devenir un Wilder :</string>
+    <string name="first_name">Prénom:</string>
+    <string name="last_name">Nom:</string>
+    <string name="validate">Valider</string>
 </resources>
